[FEATURE] Specify the folder with tests

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           PYTHONPATH: src
         run: |
-          pytest --cov=src --cov-branch --cov-report=xml
+          pytest test --cov=src --cov-branch --cov-report=xml
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
