--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,14 +25,14 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies
+        working-directory: solver
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -e solver
 
       - name: Run tests
-        env:
-          PYTHONPATH: src
+        working-directory: solver
         run: |
           pytest ./solver/test --cov=src --cov-branch --cov-report=xml
 
