[FIX] Fix the path to the tests of the solver

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run tests
         working-directory: solver
         run: |
-          pytest ./solver/test --cov=src --cov-branch --cov-report=xml
+          pytest test --cov=src --cov-branch --cov-report=xml
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
