--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Run Pytest and Generate Coverage Badge
+name: Lint and Test
 
 on:
   push:
@@ -9,8 +9,39 @@ on:
       - main
 
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        working-directory: solver
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Black check
+        working-directory: solver
+        run: black --check src test
+
+      - name: isort check
+        working-directory: solver
+        run: isort --check-only src test
+
+      - name: Flake8 lint
+        working-directory: solver
+        run: flake8 src test
+
   test:
-    name: Run Pytest and Generate Coverage Badge
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
