--- a/.github/workflows/visualizer-test.yml
+++ b/.github/workflows/visualizer-test.yml
@@ -16,10 +16,10 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
-        working-directory: ./visualizer
         with:
           node-version: 20
           cache: "npm"
+          cache-dependency-path: ./visualizer/package-lock.json
 
       - name: Install dependencies
         run: npm install
