--- a/.github/workflows/solver-lint.yml
+++ b/.github/workflows/solver-lint.yml
@@ -26,7 +26,7 @@ jobs:
         working-directory: solver
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r dev-requirements.txt
 
       - name: Black check
         working-directory: solver
