--- a/.github/workflows/solver-test.yml
+++ b/.github/workflows/solver-test.yml
@@ -28,7 +28,7 @@ jobs:
         working-directory: solver
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r dev-requirements.txt
           pip install -e .
 
       - name: Run tests
