[FEATURE] Set up testing environment with secrets in GitHub

--- a/.github/workflows/server-test.yml
+++ b/.github/workflows/server-test.yml
@@ -12,6 +12,7 @@ jobs:
   test:
     name: Pytest
     runs-on: ubuntu-latest
+    environment: testing
 
     steps:
       - name: Checkout the code
