--- a/.github/workflows/server-lint.yml
+++ b/.github/workflows/server-lint.yml
@@ -12,6 +12,7 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    environment: testing
 
     steps:
       - name: Checkout repository
