--- a/.github/workflows/solver-lint.yml
+++ b/.github/workflows/solver-lint.yml
@@ -30,12 +30,16 @@ jobs:
 
       - name: Black check
         working-directory: solver
-        run: black --check src test
+        run: black --check src test --config server/pyproject.toml
 
       - name: isort check
         working-directory: solver
-        run: isort --check-only src test
+        run: isort --check-only src test --settings-path server/pyproject.toml
 
       - name: Flake8 lint
         working-directory: solver
-        run: flake8 src test
+        run: flake8 src test --config server/.flake8
+
+      - name: Bandit security check
+        working-directory: solver
+        run: bandit -r src -c server/pyproject.toml
