--- a/server/.pre-commit-config.yaml
+++ b/server/.pre-commit-config.yaml
@@ -28,3 +28,13 @@ repos:
       types: [python]
       files: ^server/.*\.py$
       entry: flake8 --config server/.flake8
+
+- repo: https://github.com/PyCQA/bandit
+  rev: 1.8.6
+  hooks:
+    - id: bandit
+      name: bandit
+      language_version: python3.12
+      types: [python]
+      files: ^server/.*\.py$
+      entry: bandit -r -c server/pyproject.toml
