--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,3 +8,6 @@ profile = "black"
 line_length = 120
 multi_line_output = 3
 include_trailing_comma = true
+
+[tool.bandit]
+exclude_dirs = ["*/test/*"]
