--- a/.github/workflows/server-lint.yml
+++ b/.github/workflows/server-lint.yml
@@ -30,12 +30,16 @@ jobs:
 
       - name: Black check
         working-directory: server
-        run: black --check src test
+        run: black --check src test --config pyproject.toml
 
       - name: isort check
         working-directory: server
-        run: isort --check-only src test
+        run: isort --check-only src test --settings-path pyproject.toml
 
       - name: Flake8 lint
         working-directory: server
-        run: flake8 src test
+        run: flake8 src test --config .flake8
+
+      - name: Bandit security check
+        working-directory: server
+        run: bandit -r src -c pyproject.toml
