--- a/solver/pyproject.toml
+++ b/solver/pyproject.toml
@@ -22,6 +22,9 @@ classifiers = [
 Homepage = "https://github.com/ogi02/Rubik-s-Cube-Solver"
 Issues = "https://github.com/ogi02/Rubik-s-Cube-Solver"
 
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [tool.black]
 line-length = 120
 target-version = ["py312"]
