--- a/client/.pre-commit-config.yaml
+++ b/client/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       name: black
       language_version: python3.12
       types: [python]
-      files: ^server/.*\.py$
+      files: ^client/.*\.py$
       entry: black --config server/pyproject.toml
 
 - repo: https://github.com/PyCQA/isort
@@ -16,7 +16,7 @@ repos:
       name: isort
       language_version: python3.12
       types: [python]
-      files: ^server/.*\.py$
+      files: ^client/.*\.py$
       entry: isort --settings-path server/pyproject.toml
 
 - repo: https://github.com/pycqa/flake8
@@ -26,7 +26,7 @@ repos:
       name: flake8
       language_version: python3.12
       types: [python]
-      files: ^server/.*\.py$
+      files: ^client/.*\.py$
       entry: flake8 --config server/.flake8
 
 - repo: https://github.com/PyCQA/bandit
@@ -36,5 +36,5 @@ repos:
       name: bandit
       language_version: python3.12
       types: [python]
-      files: ^server/.*\.py$
+      files: ^client/.*\.py$
       entry: bandit -r -c server/pyproject.toml
