--- a/.github/workflows/client-lint.yml
+++ b/.github/workflows/client-lint.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies
-        working-directory: server
+        working-directory: client
         run: |
           python -m pip install --upgrade pip
           pip install -r dev-requirements.txt
