--- a/client/.pre-commit-config.yaml
+++ b/client/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
       language_version: python3.12
       types: [python]
       files: ^client/.*\.py$
-      entry: black --config server/pyproject.toml
+      entry: black --config client/pyproject.toml
 
 - repo: https://github.com/PyCQA/isort
   rev: 6.0.0
@@ -17,7 +17,7 @@ repos:
       language_version: python3.12
       types: [python]
       files: ^client/.*\.py$
-      entry: isort --settings-path server/pyproject.toml
+      entry: isort --settings-path client/pyproject.toml
 
 - repo: https://github.com/pycqa/flake8
   rev: 7.0.0
@@ -27,7 +27,7 @@ repos:
       language_version: python3.12
       types: [python]
       files: ^client/.*\.py$
-      entry: flake8 --config server/.flake8
+      entry: flake8 --config client/.flake8
 
 - repo: https://github.com/PyCQA/bandit
   rev: 1.8.6
@@ -37,4 +37,4 @@ repos:
       language_version: python3.12
       types: [python]
       files: ^client/.*\.py$
-      entry: bandit -r -c server/pyproject.toml
+      entry: bandit -r -c client/pyproject.toml
